FlameRoop関数の引数関数をunsigned int型の戻り値の関数に変更

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ DirectX_LIB/DirectX_LIB/Debug/
 DirectX_LIB/DirectX_LIB/Release/
 DirectX_LIB/Debug/DirectX_LIB.pdb
 DirectX_LIB/Debug_Dll/DirectX_LIB.pdb
+DirectX_LIB/Debug/
+DirectX_LIB/Release/
