除外ファイル変更

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-DirectX_LIB/.vs/
+﻿DirectX_LIB/.vs/
 DirectX_LIB/DirectX_LIB/Debug/
 DirectX_LIB/DirectX_LIB/Release/
 DirectX_LIB/Debug/
 DirectX_LIB/Release/
-
